# RadarTargetingSystem

./: .editorconfig  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.MD  README.md  app.py  pyproject.toml  requirements.txt  setup.py
.github/: copilot-instructions.md
config/: ml.yaml  pipeline.yaml  radar.yaml
src/detection/: cfar.py  clustering.py  threshold.py
src/dsp/: range_doppler.py  windowing.py
src/models/: cnn.py  dataset.py  training.py
src/radar_system/: __init__.py  app.orig.py  app.py  cli.py
src/radar_system/config/: loader.py
src/radar_system/detection/: __init__.py  cfar.py  clustering.py  threshold.py
src/radar_system/dsp/: __init__.py  range_doppler.py  windowing.py
src/radar_system/pipeline/: __init__.py  pipeline.py
src/radar_system/sim/: __init__.py  fmcw_simulator.py
src/sim/: fmcw.py
src/ui/: pipeline.py
tests/: conftest.py  test_patch_extraction.py  test_range_doppler_axes.py  test_simulation.py  test_smoke_pipeline.py
